--- a/Practica 2/Ejercicio1.html
+++ b/Practica 2/Ejercicio1.html
@@ -6,6 +6,7 @@
     <title>Ejercicio1</title>
 </head>
 <body>
+    <h1>Ejercicio 1</h1>
     <script>
         let entero = 1357;
         let decimal = 135.7;
