--- a/Practica 2/Ejercicio2.html
+++ b/Practica 2/Ejercicio2.html
@@ -6,6 +6,7 @@
     <title>Ejercicio2</title>
 </head>
 <body>
+    <h1>Ejercicio 2</h1>
     <script>
         let nombre = "Pablo";
         let apellido = "Valero";
