--- a/Practica 2/Ejercicio4.html
+++ b/Practica 2/Ejercicio4.html
@@ -6,8 +6,9 @@
     <title>Ejercicio4</title>
 </head>
 <body>
+    <h1>Ejercicio 4</h1>
     <script>
-        let respuesta = prompt ("Mensaje");
+        let respuesta = prompt ("Añade la edad");
 
         if(respuesta > 0 && respuesta <= 12){
             alert("Eres un niño");
