--- a/Practica 2/Ejercicio3.html
+++ b/Practica 2/Ejercicio3.html
@@ -6,6 +6,7 @@
     <title>Ejercicio3</title>
 </head>
 <body>
+    <h1>Ejercicio 3</h1>
     <script>
         let operacion1 = (10==10);
         let operacion2 = (10===10);
