--- a/Practica 2/Ejercicio7.html
+++ b/Practica 2/Ejercicio7.html
@@ -8,6 +8,11 @@
 <body>
     <h1>Ejercicio 7</h1>
     <script>
+        function norm(s){
+            return s.toLocaleLowerCase()
+            .trim()
+            .normalize("NFD");
+        }
         let repuesta;
         do{
             respuesta = prompt("Apelllido del primer presidente en democracia").toLocaleLowerCase();
